@@ -1,6 +1,11 @@
 FlightPath 5.x Changelog
 ========================
 
+2019-04-03
+  Mitigated some possible XSS weaknesses in index.php (by using more secure headers and cookies), and in 
+  render.inc.  When creating forms, the current path was not being santized sufficiently, which has now been
+  corrected.
+
 
 2019-03-20
   Added new system setting, letting you disable logins for all but admin.  Very helpful for
